--- a/aboutme.html
+++ b/aboutme.html
@@ -26,6 +26,6 @@
 
     <!--A horizontal line to separate my header and the content below-->
     <hr>
-    <h1>Hi Mynam eisnbfve</h1>
+    <h1>Hi My name is Jeff Muslim</h1>
 </body>
 </html>
