--- a/aboutme.html
+++ b/aboutme.html
@@ -26,6 +26,42 @@
 
     <!--A horizontal line to separate my header and the content below-->
     <hr>
-    <h1>Hi My name is Jeff Muslim</h1>
+    
+    <!--Makes the title of the page-->
+    <div class="page-title"><h3>About Me</h3></div>
+
+    <!--Creates a picture frame as well as imports the picture from the folder and adjust its size, with a caption under it-->
+    <div class="picture-box">
+        <figure>
+            <img src="AJ web pic.PNG" width="200px" height="200px">
+            <figcaption><h6>Abdurrahmaan Jahankeer (January 2025)</h6></figcaption>
+        </figure>
+        <br><br><br><br><br>
+
+        <!--Makes a small information line that shows on the page. It also makes one of the words orange, which is a different color than the rest-->
+        <div class="intro">
+            <h3> Hey, I am a 19 year old <font color="orange">Cybersecurity</font> student at Ontario Tech University. </h3>
+        </div>
+    </div>
+
+    <div class="vid">
+        <video id="video" width="640" height="480" controls poster="AJ about me poster.png" preload="auto">
+            <source src="AJ about me.mp4" type="video/mp4">
+        </video>
+    </div>
+    <br>
+
+    <!--Shows a detailed version of the games I play-->
+    <div class="games-info">
+        <h3> Games: Minecraft, Rocket League, Fortnite, Roblox, Rainbow Six Siege, Call of Duty and Clash of Clans, Clash Royale, DragonCity, etc. </h3>
+    </div>
+
+    <!--footer with my email and copyright information-->
+    <footer>
+        <div class="ftr">
+            <p>Contact: <a href="mailto:abdurrahman.jahankeer@ontariotechu.net">abdurrahman.jahankeer@ontariotechu.net</a></p>
+            <p>&copy; 2025 Abdurrahman Jahankeer</p>
+        </div>
+    </footer>
 </body>
 </html>
