--- a/projects.html
+++ b/projects.html
@@ -26,5 +26,23 @@
 
     <!--A horizontal line to separate my header and the content below-->
     <hr>
+
+    <!--Makes the title of the page-->
+    <div class="page-title"><h3>Projects</h3></div>
+
+    <!--Makes the links to each projects-->
+    <a href="crs.html" class="project-item step1" title="Opens Car Rental System in a new tab"><b class="projectnum">01</b> Car Rental System</a>
+    <a href="tas.html" class="project-item step2" title="Opens Text Autocompletion in a new tab"><b class="projectnum">02</b> Text Autocompletion System</a>
+    <a href="yylvp.html" class="project-item step3" title="Opens Ying Yang Leadership in a new tab"><b class="projectnum">03</b> Ying Yang Leadership Video Project</a>
+    <a href="vpc.html" class="project-item step4" title="Opens Video Presentation in a new tab"><b class="projectnum">04</b> Video Presentation on Computers</a>
+    <a href="ntcp.html" class="project-item step5" title="Opens Network Topology Project in a new tab"><b class="projectnum">05</b> Network Topology Configuration Project</a>
+
+    <!--footer-->
+    <footer>
+        <div class="ftr">
+            <p>Contact: <a href="mailto:abdurrahman.jahankeer@ontariotechu.net">abdurrahman.jahankeer@ontariotechu.net</a></p>
+            <p>&copy; 2025 Abdurrahman Jahankeer</p>
+        </div>
+    </footer>
 </body>
 </html>
