--- a/contactme.html
+++ b/contactme.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page - Abdurrahman Jahankeers Portfolio</title>
-    
+
+    <!-- This is the tittle to my Contact Me page that show itself at the top-->
+    <title>Contact Me - Abdurrahman Jahankeers Portfolio</title>
+
     <!--Links this html to a style sheet-->
     <link rel="stylesheet" href="style.css">
 
@@ -26,5 +28,45 @@
 
     <!--A horizontal line to separate my header and the content below-->
     <hr>
+
+    <!--Makes the title of the page-->
+    <div class="page-title"><h1>Contact Me</h1></div>
+
+    <!--All our form content is enclosed in the wrapper ID style-->
+    <div id="wrapper">
+        <!--Makes sure that when the form is done, all the content is sent to my email-->
+        <form action="mailto:abdurrahman.jahankeer@ontariotechu.net?subject=Contact Form from website" enctype="text/plain" method="post" name="ContactForm">
+
+            <!--Create prompts for the form-->
+            <div class="prompts">     
+                <p>
+                    <label for="FullName">Full Name: </label><br>
+                    <input type="text" name="FullName" size="40" placeholder="Please enter your full name" required>
+                </p>
+                <p>
+                    <label for="Email">Email: </label><br>
+                    <input type="email" name="Email" size="40" placeholder="Please enter your email address" required>
+                </p>
+                <p>
+                    <label for="Message">Message: </label><br>
+                    <textarea name="Message" cols="60" rows="8" placeholder="Please enter your message here"></textarea>
+                </p>
+            </div>
+
+            <!--Add two buttons that submit or reset the form-->
+            <p>
+                <button type="reset" value="Reset">Reset</button>
+                <button type="submit" value="Submit">Submit</button>
+            </p>
+        </form>
+    </div>
+
+    <!--footer-->
+    <footer>
+        <div class="ftr">
+            <p>Contact: <a href="mailto:abdurrahman.jahankeer@ontariotechu.net">abdurrahman.jahankeer@ontariotechu.net</a></p>
+            <p>&copy; 2025 Abdurrahman Jahankeer</p>
+        </div>
+    </footer>
 </body>
 </html>
