I fixed some mistakes for the project pages

--- a/ntcp.html
+++ b/ntcp.html
@@ -52,6 +52,7 @@
     <div class="project-nav-links">
         <div class="project-nav-box"><a href="vpc.html"><-- Previous</a></div>
         <div class="project-nav-box"><a href="projects.html">Back</a></div>
+        <div class="project-nav-box"><a href="projects.html">Next --></a></div>
     </div>
 
     <!--footer-->
