I added my Resume to the About Me page

--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page - Abdurrahman Jahankeers Portfolio</title>
+    <title>About Me - Abdurrahman Jahankeers Portfolio</title>
     
     <!--Links this html to a style sheet-->
     <link rel="stylesheet" href="style.css">
@@ -54,6 +54,55 @@
     <!--Shows a detailed version of the games I play-->
     <div class="games-info">
         <h3> Games: Minecraft, Rocket League, Fortnite, Roblox, Rainbow Six Siege, Call of Duty and Clash of Clans, Clash Royale, DragonCity, etc. </h3>
+    </div>
+
+    <!--Resume-->
+    <!-- Skills -->
+    <div class="resume-section">
+        <h2>Skills</h2>
+        <p>Detail-Oriented Individual</p>
+        <p>Excellent Customer Service</p>
+        <p>Excellent Memorization Skills</p>
+        <p>Collaborative Team Player</p>
+        <p>Works Effectively in Fast-Paced Environments</p>
+        <p>Effective Communication Skills</p>
+        <p>Trained in Computer Programming (Excel, Word)</p>
+        <p>Works Well in Group and Independent Settings</p>
+        <p>Team Leader</p>
+    </div>
+
+    <!-- Experience -->
+    <div class="resume-section">
+        <h2>Experience</h2>
+
+        <h3>Masjid Al Jannah — Volunteer (2014 - Present)</h3>
+        <p>Food preparation, store assistance, advertising programs, handling donations, table setup, leading congregations, security guard duties, and class supervision.</p>
+
+        <h3>Greenstar Computers — Package Handler & Warehouse Clerk (2014 - Present)</h3>
+        <p>Cleaning, packing, loading/unloading packages, and testing monitors and hard drives.</p>
+
+        <h3>Masjid Quba — Assistant Teacher & Supervisor (2021 - Present)</h3>
+        <p>Evaluating homework, helping with memorization, supervising classes, and parking lot duty.</p>
+
+        <h3>Shoppers Drug Mart — Merchandiser & Cashier (2022 - Present)</h3>
+        <p>Cashier duties, restocking shelves, checking expiration dates, inventory sorting, garbage disposal, and temperature logging.</p>
+    </div>
+
+    <!-- Education -->
+    <div class="resume-section">
+        <h2>Education</h2>
+        <p>Ontario Tech University (2024 - 2028)</p>
+        <p>Bachelor’s of Information Technology - Networking and IT Security</p>
+        <p>Second Year Student - Expected Graduation June 2028</p>
+    </div>
+
+    <!-- Awards -->
+    <div class="resume-section">
+        <h2>Awards</h2>
+        <p>Masjid Quba Volunteer Award</p>
+        <p>Sunday School Valedictorian</p>
+        <p>Sunday School Key</p>
+        <p>High School Diploma</p>
     </div>
 
     <!--footer with my email and copyright information-->
