--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page - Abdurrahman Jahankeers Portfolio</title>
+    <title>Projects Page - Abdurrahman Jahankeers Portfolio</title>
     
     <!--Links this html to a style sheet-->
     <link rel="stylesheet" href="style.css">
