I added my social medias to the footer

--- a/homepage.html
+++ b/homepage.html
@@ -44,6 +44,13 @@
             <p>Contact: <a href="mailto:abdurrahman.jahankeer@ontariotechu.net">abdurrahman.jahankeer@ontariotechu.net</a></p>
             <p>&copy; 2025 Abdurrahman Jahankeer</p>
         </div>
+        <!--Social Media Links-->
+        <div class="Social-Media-Links">
+            <a href="https://www.instagram.com/_mrramen/" target="blank">Instagram</a>
+            <a href="https://twitter.com/_mrramen" target="blank">Twitter</a>
+            <a href="https://www.youtube.com/@c7ramen" target="blank">Youtube</a>
+            <a href="https://www.facebook.com/profile.php?id=100082633274977" target="blank">Facebook</a>
+        </div>
     </footer>
     <!--Test update-->
 </body>
