I styled my social medias in the footer to make it look like you are clicking logos

--- a/contactme.html
+++ b/contactme.html
@@ -61,11 +61,26 @@
         </form>
     </div>
 
-    <!--footer-->
+    <!--My footer with my email and copyright information-->
     <footer>
         <div class="ftr">
             <p>Contact: <a href="mailto:abdurrahman.jahankeer@ontariotechu.net">abdurrahman.jahankeer@ontariotechu.net</a></p>
             <p>&copy; 2025 Abdurrahman Jahankeer</p>
+        </div>
+        <!--Social Media Links-->
+        <div class="Social-Media-Links">
+            <a href="https://www.instagram.com/_mrramen/" target="blank">
+                <img src="Blue Instagram.png" alt="Instagram" width="50" height="50">
+            </a>
+            <a href="https://twitter.com/_mrramen" target="blank">
+                <img src="Blue Twitter.png" alt="Twitter" width="50" height="50">
+            </a>
+            <a href="https://www.youtube.com/@c7ramen" target="blank">
+                <img src="Blue Youtube.png" alt="Youtube" width="50" height="50">
+            </a>
+            <a href="https://www.facebook.com/profile.php?id=100082633274977" target="blank">
+                <img src="Blue Facebook.png" alt="Facebook" width="50" height="50">
+            </a>
         </div>
     </footer>
 </body>
