--- a/homepage.html
+++ b/homepage.html
@@ -46,10 +46,18 @@
         </div>
         <!--Social Media Links-->
         <div class="Social-Media-Links">
-            <a href="https://www.instagram.com/_mrramen/" target="blank">Instagram</a>
-            <a href="https://twitter.com/_mrramen" target="blank">Twitter</a>
-            <a href="https://www.youtube.com/@c7ramen" target="blank">Youtube</a>
-            <a href="https://www.facebook.com/profile.php?id=100082633274977" target="blank">Facebook</a>
+            <a href="https://www.instagram.com/_mrramen/" target="blank">
+                <img src="Blue Instagram.png" alt="Instagram" width="50" height="50">
+            </a>
+            <a href="https://twitter.com/_mrramen" target="blank">
+                <img src="Blue Twitter.png" alt="Twitter" width="50" height="50">
+            </a>
+            <a href="https://www.youtube.com/@c7ramen" target="blank">
+                <img src="Blue Youtube.png" alt="Youtube" width="50" height="50">
+            </a>
+            <a href="https://www.facebook.com/profile.php?id=100082633274977" target="blank">
+                <img src="Blue Facebook.png" alt="Facebook" width="50" height="50">
+            </a>
         </div>
     </footer>
     <!--Test update-->
