--- a/homepage.html
+++ b/homepage.html
@@ -44,7 +44,7 @@
             <p>Contact: <a href="mailto:abdurrahman.jahankeer@ontariotechu.net">abdurrahman.jahankeer@ontariotechu.net</a></p>
             <p>&copy; 2025 Abdurrahman Jahankeer</p>
         </div>
-        <!--Social Media Links-->
+        <!--Social Media Links and Logos for the footer-->
         <div class="Social-Media-Links">
             <a href="https://www.instagram.com/_mrramen/" target="blank">
                 <img src="Blue Instagram.png" alt="Instagram" width="50" height="50">
