I fixed my semantic tags

--- a/contactme.html
+++ b/contactme.html
@@ -17,14 +17,16 @@
 </head>
 <body>
     <!--Creates a navigation bar with 4 hyper links-->
-    <nav>
-        <div class="top-links">
-            <a href="homepage.html" title="Opens Home Page in a new tab">Home Page</a>
-            <a href="aboutme.html" title="Opens About Me in a new tab">About Me</a>
-            <a href="projects.html" title="Opens Projects in a new tab">Projects</a>
-            <a href="contactme.html" title="Opens Contact Me in a new tab">Contact Me</a>
-        </div>
-    </nav>
+    <header>
+        <nav>
+            <div class="top-links">
+                <a href="homepage.html" title="Opens Home Page in a new tab">Home Page</a>
+                <a href="aboutme.html" title="Opens About Me in a new tab">About Me</a>
+                <a href="projects.html" title="Opens Projects in a new tab">Projects</a>
+                <a href="contactme.html" title="Opens Contact Me in a new tab">Contact Me</a>
+            </div>
+        </nav>
+    </header>
 
     <!--A horizontal line to separate my header and the content below-->
     <hr>
