--- a/vpc.html
+++ b/vpc.html
@@ -18,18 +18,23 @@
 <body>
 
     <!--Creates a navigation bar with 4 hyper links-->
-    <nav>
-        <div class="top-links">
-            <a href="homepage.html">Home Page</a>
-            <a href="aboutme.html">About Me</a>
-            <a href="projects.html">Projects</a>
-            <a href="contactme.html">Contact Me</a>
-        </div>
-    </nav>
+    <header>
+        <nav>
+            <div class="top-links">
+                <a href="homepage.html" title="Opens Home Page in a new tab">Home Page</a>
+                <a href="aboutme.html" title="Opens About Me in a new tab">About Me</a>
+                <a href="projects.html" title="Opens Projects in a new tab">Projects</a>
+                <a href="contactme.html" title="Opens Contact Me in a new tab">Contact Me</a>
+            </div>
+        </nav>
+    </header>
 
     <!--A horizontal line to separate my header and the content below-->
     <hr>
 
+    <!--Article semantic tag-->
+    <article>
+    
     <!--Makes the title of the page-->
     <div class="page-title"><h3>Project 4: Video Presentation on Computers</h3></div>
 
@@ -43,6 +48,7 @@
         essential tools in shaping today’s digital world.
         </h4>
     </div>
+    </article>
 
     <!--Displays who my partners were when doing the project-->
     <div class="project-partners">
