--- a/projects.html
+++ b/projects.html
@@ -9,20 +9,22 @@
     <link rel="stylesheet" href="style.css">
 
     <!--I created different screens for multiple devices-->
-    <link rel="stylesheet" href="mobile.css" media="only screen and (max-width: 600px)">
-    <link rel="stylesheet" href="tablet.css" media="only screen and (min-width: 601px) and (max-width: 1024px)">
-    <link rel="stylesheet" href="laptop.css" media="only screen and (min-width: 1025px)">
+    <link rel="stylesheet" href="mobile.css" media="only screen and (max-width: 480px)">
+    <link rel="stylesheet" href="tablet.css" media="only screen and (min-width: 481px) and (max-width: 959px)">
+    <link rel="stylesheet" href="laptop.css" media="only screen and (min-width: 960px)">
 </head>
 <body>
     <!--Creates a navigation bar with 4 hyper links-->
-    <nav>
-        <div class="top-links">
-            <a href="homepage.html" title="Opens Home Page in a new tab">Home Page</a>
-            <a href="aboutme.html" title="Opens About Me in a new tab">About Me</a>
-            <a href="projects.html" title="Opens Projects in a new tab">Projects</a>
-            <a href="contactme.html" title="Opens Contact Me in a new tab">Contact Me</a>
-        </div>
-    </nav>
+    <header>
+        <nav>
+            <div class="top-links">
+                <a href="homepage.html" title="Opens Home Page in a new tab">Home Page</a>
+                <a href="aboutme.html" title="Opens About Me in a new tab">About Me</a>
+                <a href="projects.html" title="Opens Projects in a new tab">Projects</a>
+                <a href="contactme.html" title="Opens Contact Me in a new tab">Contact Me</a>
+            </div>
+        </nav>
+    </header>
 
     <!--A horizontal line to separate my header and the content below-->
     <hr>
