--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
     <header>
         <nav>
             <div class="top-links">
-                <a href="homepage.html" title="Opens Home Page in a new tab">Home Page</a>
+                <a href="index.html" title="Opens Home Page in a new tab">Home Page</a>
                 <a href="aboutme.html" title="Opens About Me in a new tab">About Me</a>
                 <a href="projects.html" title="Opens Projects in a new tab">Projects</a>
                 <a href="contactme.html" title="Opens Contact Me in a new tab">Contact Me</a>
