--- a/aboutme.html
+++ b/aboutme.html
@@ -35,7 +35,7 @@
     <!--Creates a picture frame as well as imports the picture from the folder and adjust its size, with a caption under it-->
     <div class="picture-box">
         <figure>
-            <img src="AJ web pic.PNG" width="200px" height="200px">
+            <img src="AJ web pic.png" width="200px" height="200px">
             <figcaption><h6>Abdurrahmaan Jahankeer (January 2025)</h6></figcaption>
         </figure>
         <br><br>
@@ -122,7 +122,7 @@
                 <img src="Blue Twitter.png" alt="Twitter" width="50" height="50">
             </a>
             <a href="https://www.youtube.com/@c7ramen" target="blank">
-                <img src="Blue Youtube.png" alt="Youtube" width="50" height="50">
+                <img src="Blue Youtube.png"  "Youtube" width="50" height="50">
             </a>
             <a href="https://www.facebook.com/profile.php?id=100082633274977" target="blank">
                 <img src="Blue Facebook.png" alt="Facebook" width="50" height="50">
